# research-agent

./: .env.example  README.md  TODO.md  setup.cfg  test_sandbox_probe.py
.codex/: config.toml
.github/workflows/: bump-version.yml
challenges/prediction_market/: spec.md
docs/: architecture.md  gen_overview_diagram.py  gen_sequence_diagram.py  long_running_tasks.md  schema.md
docs/assets/: ephemeral_evolutionary_harness.mmd
optimization_graders/: __init__.py  registry.py
optimization_graders/prediction_market/: __init__.py  adapter.py  spec.md
prompts/: critic_agent.md  hypothesis_agent.md  literature_agent.md  synthesis_agent.md
research_harness/: __init__.py  agent_loop.py  agent_state.py  agents.py  benchmark.py  citation_validation.py  cli.py  cli_progress.py  context_projection.py  diagnostics.py  document_ingestion.py  experiments.py  llm.py  loop_evaluators.py  loop_routing.py  loop_utils.py  loops.py  model_catalog.py  optimization_agent.py  orchestrator.py  research_agent.py  run_benchmarks.py  run_visuals.py  sandbox.py  schemas.py  search.py  steering.py  store.py  terminal_bench.py  visual_operations.py  worker_registry.py
scripts/: bump_version.py
services/: README.md  firecrawl.md
tests/: test_autore_cli_e2e.py  test_document_data_tools.py  test_experiments.py  test_external_services.py  test_grounding_integrity.py  test_observability_progress_comparison.py  test_optimization_graders.py  test_research_agent.py  test_smoke.py  test_terminal_bench.py  test_version_bump.py  test_visual_models.py  test_worker_registry.py
(+40 files in other folders)
