[metadata]
name = research-harness
version = 0.1.0
description = Model-directed research and evaluation harness with native tool calling.

[options]
packages = find:
python_requires = >=3.9
include_package_data = True

[options.package_data]
research_harness =
    migrations/*.sql

[options.entry_points]
console_scripts =
    research-harness = research_harness.cli:main
    autore = research_harness.cli:main
    autore-bench = research_harness.benchmark:main
    autore-eval = research_harness.evals:main
